make recipe details dialog narrower to avoid white space

--- a/src/components/RecipeDetails/recipeDetails.css
+++ b/src/components/RecipeDetails/recipeDetails.css
@@ -1,5 +1,5 @@
 .RecipeDetailsDialog .MuiDialog-paperWidthSm {
-	width: 80%;
+	width: 50%;
 	max-width: unset;
 }
 
